[tool.poetry]
name = "prompt-optimizer"
version = "0.1.0"
description = "Shared configuration for all microservices"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.6.9"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
pylint = "^4.0.2"

[tool.ruff]
target-version = "py311"
line-length = 119
exclude = [
  "infra/",
  "build/",
  "dist/",
  ".venv/",
  "venv/",
  ".mypy_cache/",
  ".ruff_cache/",
  ".pytest_cache/",
]

[tool.ruff.lint]
select = ["E","F","I","B","UP","RUF"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true

[tool.pylint.main]
load-plugins = ["pylint.extensions.mccabe"]
fail-under = 10

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "line-too-long",
]

[tool.pylint.design]
max-args = 5
max-locals = 15
max-branches = 10
max-returns = 5
max-statements = 60
max-complexity = 10
