[tool.poetry]
name = "prompt-optimizer-agent"
version = "0.1.0"
description = "Agent engine (Proposer + Evaluator) with LangGraph orchestration and DeepEval metrics."
authors = ["Ranit Raj Ganguly <ranitrajganguly@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12.0"
openai = "^2.6.0"
langgraph = "^1.0.2"
deepeval = "^3.6.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.14.3"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
pylint = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"