[tool.poetry]
name = "agent-engine"
version = "0.1.0"
description = "Agent engine (Proposer + Evaluator) with LangGraph orchestration and DeepEval metrics."
authors = ["Ranit Raj Ganguly <ranitrajganguly@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.12.0"
openai = "^2.6.0"
langgraph = "^1.0.2"
deepeval = "^3.6.9"

[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"
